# Trust-Grid

./: .gitignore  AUTHENTICATION_SETUP.md  HANDOFF.md  README.md  TODO.md  TRUSTGRID_COMPLETE_GUIDE.md  TrustGrid_Comprehensive_Overview.md  check_api_key.py  check_latest_request.py  check_prod_keys.py  debug_api_key.py  debug_prod_endpoints.py  debug_prod_org.py  debug_request_status.py  debug_user.py  fix_password_length.py  fix_user_settings.py  package-lock.json  test_api_key_validation.py  test_auto_email_request.py  test_bvn_request.py  test_data_request_direct.py  test_direct_api_call.py  test_endpoint_exists.py  test_endpoints.py  test_fresh_request.py  test_manual_approval_flow.py  test_org_endpoint.py  test_prod_auth.py  test_production_backend.py  test_sdk.py  test_specific_status.py  test_tga_sdk_data_retrieval.py
apps/citizen-app/: package-lock.json  package.json  tailwind.config.ts
backend/dev-page/: package-lock.json  render.yaml  tailwind.config.js
backend/dev-page/src/: App.jsx  api.js  index.css
backend/tga-sdk/: README.md  pyproject.toml  test_sdk.py
backend/tga-sdk/tga/: __init__.py  client.py
backend/trustgrid-api/: .env  requirements.txt
citizen-app/: package-lock.json  package.json  tailwind.config.ts
citizen-app/.next/: trace
frontend/: TODO.md  index.html  package-lock.json  package.json  vite  vite.config.js
frontend/src/: App.jsx  api.js  index.css
org-dashboard/: package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
org-dashboard/src/: App.jsx
veritas-ai-landing/: package.json  tailwind.config.ts
(+95 files in other folders)
