[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tga"
version = "0.1.0"
description = "SDK for Trust-Grid API"
authors = [
    {name = "Raufu Abdulrahman", email = "coder0214h@gmail.com"},
]
dependencies = [
    "requests>=2.25.0",
    "pydantic>=1.8.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/your-repo/trust-grid"
Repository = "https://github.com/your-repo/trust-grid"

[tool.setuptools.packages.find]
where = ["."]
include = ["tga*"]
